# projeto_competitividade

./: main.py  pyproject.toml
data/: link_competitividade.csv
