[tool.poetry]
name = "projeto-competitividade"
version = "0.1.0"
description = ""
authors = ["Guilherme A Fernandes <guilhermeamorim42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
